# libczi-zeiss

./: .mega-linter.yml  CMakeLists.txt  VSWorkspaceSettings.json
.github/: copilot-instructions.md
.github/workflows/: cmake.yml  pages.yml
Src/: CMakeLists.txt
Src/CZICmd/: CMakeLists.txt  CZIcmd.cpp  SaveBitmap.cpp  cmdlineoptions.cpp  cmdlineoptions.h  execute.cpp  executeAsyncTest.cpp  executeAsyncTest.h
Src/CZICmd/tests/: CMakeLists.txt  run_tests.py  testcases.txt
Src/RemoveScenes/: CMakeLists.txt  main.cpp
Src/libCZI/: CMakeLists.txt  CZIReader.cpp  CZIReader.h  CZIReaderAsync.cpp  CZIReaderAsync.h  CreateBitmap.cpp  CziAttachmentsDirectory.cpp  CziAttachmentsDirectory.h  CziParse.cpp  CziParse.h  CziReaderWriter.cpp  CziReaderWriter.h  CziUtils.cpp  DimCoordinate.cpp  async_action.cpp  async_action.h  async_utils.cpp  async_utils.h  chunkedCompress.cpp  compresscommon.cpp  compresscommon.h  decoder_chunkedcompression.cpp  decoder_chunkedcompression.h  decoder_wic.cpp  decoder_zstd.cpp  libCZI.h  libCZI_Async.h  libCZI_Config.h.in  libCZI_Pixels.h  libCZI_Site.cpp  libCZI_Site.h  libCZI_StreamsLib.h  libCZI_Utilities.cpp  libCZI_Utilities.h  libCZI_compress.h  libCZI_exceptions.h  utilities.cpp  utilities.h  zstdCompress.cpp
Src/libCZI/StreamsLib/: StructurePool.h  streamsFactory.cpp  windowsfileapcasyncinputstream.cpp  windowsfileapcasyncinputstream.h
Src/libCZIAPI_UnitTests/: CMakeLists.txt
Src/libCZI_UnitTests/: CMakeLists.txt  MemAsyncInputStream.cpp  MemAsyncInputStream.h  MemInputOutputStream.cpp  inc_libCZI.h  test_AsyncOperation.cpp  test_Utilities.cpp  test_ZstdCompress.cpp  test_asyncreader.cpp  test_chunkedcompression.cpp  test_reader.cpp  test_readerwriter.cpp
Src/streams/: CMakeLists.txt  ImportExport.h  cprInputStream.h  libCZIStream.h  libCZIStream_Lib.cpp  streamsFactory.cpp  streamsFactory.h  streams_Config.h.in
Src/streams/include/: streamsFactory.h
Src/streams/src/: cprInputStream.cpp  cprInputStream.h  streamsFactory.cpp
cmake/: patch_cmake_minimum_version.cmake
docs/scripts/: Dockerfile
docs/source/pages/: czicmd_usage.rst  version_history.md
